--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Lucky Duck!</title>
 </head>
 <body>
+    <button onclick="generalCall()">General</button>
+    <button onclick="filterGluten()">Gluten</button>
+    <button onclick="filterLactose()">Lactose</button>
+    <button onclick="filterSeafood()">Seafood</button>
+    <button onclick="filterEggs()">Eggs</button>
+    <button onclick="filterMeat()">Vegetarian</button>
     <div id="menu-container">
         
     </div>
