--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Lucky Duck!</title>
 </head>
 <body>
-    <button onclick="generalCall()">General</button>
+
     <button onclick="filterGluten()">Gluten</button>
     <button onclick="filterLactose()">Lactose</button>
     <button onclick="filterSeafood()">Seafood</button>
     <button onclick="filterEggs()">Eggs</button>
     <button onclick="filterMeat()">Vegetarian</button>
-    <div id="menu-container">
-        
-    </div>
+    
+    <div id="menu-container"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
