--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
      <div id="menu-container"></div> <!--Denna div representerar vart själva menyn ligger -->
     <script src="script.js"></script>
     <script src="simonScript.js"></script>
+    <script src="Ismails.js"></script>
 </body>
 </html>
