Uppdaterad version med checkbox som samlar in de olika allergierna

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
     </div>
 
-      <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+      <nav class="navbar navbar-expand sticky-top navbar-dark bg-dark">
         <a class="navbar-brand" href="#top"><img src="lucky_duck.png" width="40" height="40" class="d-inline-block align-top" alt="">
           Lucky Duck</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,32 +43,32 @@
         </a>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
            <li>
-            <input class="form-check-input" type="checkbox" value="" id="Laktos">
-            <label class="form-check-label" for="Laktos">
+            <input class="form-check-input" type="checkbox" value="lactose" name="allergiCheck">
+            <label class="form-check-label" for="allergiCheck">
               Mjölk/laktos
             </label>
           </li>
           <li>
-            <input class="form-check-input" type="checkbox" value="" id="Egg">
-            <label class="form-check-label" for="Egg">
+            <input class="form-check-input" type="checkbox" value="egg" name="allergiCheck">
+            <label class="form-check-label" for="flexCheckDefault">
               Ägg
             </label>
           </li>
           <li>
-            <input class="form-check-input" type="checkbox" value="" id="Gluten">
-            <label class="form-check-label" for="Gluten">
+            <input class="form-check-input" type="checkbox" value="gluten" name="allergiCheck">
+            <label class="form-check-label" for="flexCheckDefault">
                 Gluten
             </label>
           </li>
           <li>
-            <input class="form-check-input" type="checkbox" value="" id="Skaldjur">
-            <label class="form-check-label" for="Skaldjur">
+            <input class="form-check-input" type="checkbox" value="seafood" name="allergiCheck">
+            <label class="form-check-label" for="flexCheckDefault">
                   Fisk/skaldjur
             </label>
           </li>
           <li>
-            <input class="form-check-input" type="checkbox" value="" id="Notter">
-            <label class="form-check-label" for="Notter">
+            <input class="form-check-input" type="checkbox" value="nuts" name="allergiCheck">
+            <label class="form-check-label" for="flexCheckDefault">
                     Nötter
             </label>
           </li>
@@ -83,31 +83,31 @@
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
          <li>
-          <input class="form-check-input" type="checkbox" value="" id="Vegetariskt">
+          <input class="form-check-input" type="checkbox" value="Vegetariskt" id="proteinCheck">
           <label class="form-check-label" for="Vegetariskt">
             Vegetariskt
           </label>
         </li>
         <li>
-          <input class="form-check-input" type="checkbox" value="" id="Kyckling">
+          <input class="form-check-input" type="checkbox" value="Kyckling" id="proteinCheck">
           <label class="form-check-label" for="Kyckling">
             Kyckling
           </label>
         </li>
         <li>
-          <input class="form-check-input" type="checkbox" value="" id="Fisk">
+          <input class="form-check-input" type="checkbox" value="Fisk" id="proteinCheck">
           <label class="form-check-label" for="Fisk">
             Fisk/skaldjur
           </label>
         </li>
         <li>
-          <input class="form-check-input" type="checkbox" value="" id="Beef">
+          <input class="form-check-input" type="checkbox" value="Beef" id="proteinCheck">
           <label class="form-check-label" for="Beef">
             Nötkött
           </label>
         </li>
         <li>
-          <input class="form-check-input" type="checkbox" value="" id="Pork">
+          <input class="form-check-input" type="checkbox" value="Pork" id="proteinCheck">
           <label class="form-check-label" for="Pork">
             Fläsk
           </label>
@@ -122,14 +122,14 @@
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
          <li>
-          <input class="form-check-input" type="checkbox" value="" id="lowtohigh">
-          <label class="form-check-label" for="lowtohigh">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
             Lägsta till högsta
           </label>
         </li>
         <li>
-          <input class="form-check-input" type="checkbox" value="" id="hightolow">
-          <label class="form-check-label" for="hightolow">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
             Högsta till lägsta
           </label>
       </ul>
