--- a/info.html
+++ b/info.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#top"><img src="lucky_duck.png" width="40" height="40" class="d-inline-block align-top" alt="">
+    <nav class="navbar navbar-expand sticky-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html"><img src="lucky_duck.png" width="40" height="40" class="d-inline-block align-top" alt="">
           Lucky Duck</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
