uppdaterad med kommentarer och småbuggar

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
     <div class="col">
     <div class="form-check">
-      <input class="form-check-input" type="radio" name="prisKnapp" value="1" id="flexRadioDefault" checked>
+      <input class="form-check-input" type="radio" name="prisKnapp" value="1" id="flexRadioDefault">
       <label class="form-check-label" for="flexRadioDefault1">
         Stigande pris
       </label>
