--- a/index.html
+++ b/index.html
@@ -6,18 +6,131 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Lucky Duck!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+   
+    
 </head>
 <body>
-    <input type="button" value="Sortera Stigande" onclick="SortAscending()">
-    <input type="button" value="Sortera Fallande" onclick="SortDescending()">
-    <button onclick="filterGluten()">Gluten</button>
-    <button onclick="filterLactose()">Lactose</button>
-    <button onclick="filterSeafood()">Seafood</button>
-    <button onclick="filterEggs()">Eggs</button>
-    <button onclick="filterMeat()">Vegetarian</button>
-     <div id="menu-container"></div> <!--Denna div representerar vart själva menyn ligger -->
+
+      <nav class="navbar navbar-expand sticky-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="#top"><img src="lucky_duck.png" width="40" height="40" class="d-inline-block align-top" alt="">
+          Lucky Duck</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#index.html">Meny</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="info.html">Om oss</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+<br />
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+          Filtrera allergier
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+           <li>
+            <label onclick="filterLactose()" class="dropdown-option" class="form-check-label" for="allergiCheck">
+              Mjölk/laktos
+            </label>
+          </li>
+          <li>
+            <label onclick="" class="dropdown-option" class="form-check-label" for="flexCheckDefault">
+              Ägg
+            </label>
+          </li>
+          <li>
+            <label onclick="filterGluten()" class="dropdown-option" class="form-check-label" for="flexCheckDefault">
+                Gluten
+            </label>
+          </li>
+          <li>
+            <label onclick="filterSeafood()" class="dropdown-option" class="form-check-label" for="flexCheckDefault">
+                  Fisk/skaldjur
+            </label>
+          </li>
+          <li>
+            <label onclick="" class="dropdown-option" class="form-check-label" for="flexCheckDefault">
+                    Nötter
+            </label>
+          </li>
+        </ul>
+      </div>
+
+
+
+  <div class="col">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+        Val av protein
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+         <li>
+          <label onclick="" class="dropdown-option" class="form-check-label" for="Vegetariskt">
+            Vegetariskt
+          </label>
+        </li>
+        <li>
+          <label onclick="" class="dropdown-option" class="form-check-label" for="Kyckling">
+            Kyckling
+          </label>
+        </li>
+        <li>
+          <label onclick="" class="dropdown-option" class="form-check-label" for="Fisk">
+            Fisk/skaldjur
+          </label>
+        </li>
+        <li>
+          <label onclick="" class="dropdown-option" class="form-check-label" for="Beef">
+            Nötkött
+          </label>
+        </li>
+        <li>
+          <label onclick="" class="dropdown-option" class="form-check-label" for="Pork">
+            Fläsk
+          </label>
+        </li>
+      </ul>
+    </div>
+    <div class="col">
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="prisKnapp" value="1" id="flexRadioDefault" checked>
+      <label class="form-check-label" for="flexRadioDefault1" style="color: black;">
+        Stigande pris
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="prisKnapp" value="2" id="flexRadioDefault">
+      <label class="form-check-label" for="flexRadioDefault2" style="color: black;">
+        Fallande pris
+      </label>
+      <button id="submit">Submit</button>
+    </div>
+  </div>
+<br />
+
+
+
+    <div class="container-fluid" id="menu-container">
+
+    </div>
+    
+
+
+
+
+
     <script src="script.js"></script>
-    <script src="simonScript.js"></script>
-    <script src="Ismails.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
