--- a/index.html
+++ b/index.html
@@ -95,35 +95,36 @@
         3. Val av protein
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <label onclick="filterSeafood()" class="form-check">
+        <li>
+        <label onclick="selectVegetarian()" class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
           <label class="form-check-label" for="defaultCheck1">
             Vegetariskt
           </label>
         </li>
         <li>
-          <label onclick="filterSeafood()" class="form-check">
+          <label onclick="selectChicken()" class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
               Kyckling
             </label>
         </li>
         <li>
-          <label onclick="filterSeafood()" class="form-check">
+          <label onclick="selectFishSeafood()" class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
               Fisk/skaldjur
             </label>
         </li>
         <li>
-          <label onclick="filterSeafood()" class="form-check">
+          <label onclick="selectBeef()" class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
               Nötkött
             </label>
         </li>
         <li>
-          <label onclick="filterSeafood()" class="form-check">
+          <label onclick="selectPork()" class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
               Fläsk
